# icargo-backend

./: .dockerignore  .env-example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  docker-compose.yaml  docker-compose.yml  mypy.ini  noxfile.py  prestart.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 03bfd07864b1_add_tipo_retencion_and_change_iva_.py  08175e97884c_.py  0855f4f04d18_.py  087aa5f54e43_.py  0b44b24b5ea3_liquidacion_aprob_data.py  0d389d76cf15_pdv_valor_predeterminado_created_by.py  0eee5ca9f4f2_.py  0f28d85af9de_.py  13429062c0d1_add_columns_promedios.py  13ee7d16b422_.py  16b5af41e2ba_.py  172eeeb1482c_corregir_permiso_crear_efectivo.py  17656ae9f551_.py  1853e3860b65_add_column_obs_liquidacion.py  1992238f37d7_add_column_ordenpago_liquidaciones.py  1a0dc4c2206a_.py  1b5a6ddd22e4_add_constrain_uk_pdv.py  1c8afc14461f_fusionando_ramas_de_migración.py  1c90eddb7aba_.py  1dd01a9a242d_.py  23212a8f4111_movimiento_add_punto_venta.py  232894d29c06_.py  2357d82e221d_.py  242c2281fb07_.py  24407cb885fb_add_is_edit_column_to_flete.py  265d4f0abe35_remitente_valor_predeterminado_created_.py  27139fe9088e_add_insumo_column.py  2c6cc5464b3c_.py  30276cf59c8f_create_provision_table.py  37f2e8a36cd6_add_ratings_to_orden_carga_evaluaciones_.py  3c141e8fffd4_.py  42ce6b07aff6_add_permisos_evaluacion.py  434ae6da6f7d_hora_inicio.py  43921d92138f_add_columns_to_flete_complemento_and_.py  452cf76ae03b_oc_comentarios_historial.py  48e2dbe45a1f_corregir_permisos_anticipos.py  4a47fa0afc9d_.py  4be07600fae0_delete_permiso_resultado_remision.py  4ce993c65c80_add_permiso_instrumento_anulacion.py  52327a99d747_oc_tipo_incidente.py  (+94 more)
app/: __init__.py  alembic.ini  combinacion.py  config.py  constants.py  logger.py  main.py
app/audits/: __init__.py  audit_auth.py  audit_database.py  audit_functions.py  audit_listeners.py  audit_mixin.py  audit_request.py
app/cache/: __init__.py  ciudad.py  permiso.py
app/database/: base.py  check_is_ready.py  initial_data.py  populate.py  seeds.py
app/db/: __init__.py
app/dependencies/: __init__.py  current_user.py  database_connection.py  database_session.py  permiso.py  permisos.py
app/endpoints/: __init__.py  app.py  app_prov.py  app_prov_auth.py  app_prov_transactional_user.py  auth.py  banco.py  caja.py  camion.py  camion_semi_neto.py  cargo.py  centro_operativo.py  centro_operativo_clasificacion.py  chofer.py  ciudad.py  color.py  combinacion.py  comentarios_flota.py  composicion_juridica.py  contacto.py  contraparte.py  contribuyente.py  ente_emisor_automotor.py  (+61 more)
(+538 files in other folders)
