[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = "FastAPI test"
authors = ["Edgar <edgarvaldez99@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
python-decouple = "^3.4"
python-dotenv = "^0.19.0"
alembic = "^1.7.1"
SQLAlchemy = "^1.4.23"
psycopg2-binary = "^2.9.1"
tenacity = "^8.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
email-validator = "^1.1.3"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
isort = "^5.9.3"
black = "^21.8b0"
pytest = "^6.2.5"
coverage = "^5.5"
pre-commit = "^2.15.0"
types-aiofiles = "^0.1.9"
types-orjson = "^3.6.0"
types-ujson = "^0.1.1"
nox = "^2021.6.12"
safety = "^1.10.3"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
