[tool.poetry]
name = "ICargo"
version = "0.1.0"
description = "ICargo FastAPI Project"
authors = ["Edgar <edgarvaldez99@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.0"
uvicorn = "^0.15.0"
pydantic = "^1.10.2"
sqlalchemy = "^1.4.41"
python-decouple = "^3.6"
python-dotenv = "^0.19.2"
alembic = "^1.8.1"
SQLAlchemy = "^1.4.23"
psycopg2-binary = "^2.9.3"
tenacity = "^8.1.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
email-validator = "^1.3.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
openpyxl = "^3.0.10"
aiofiles = "^0.7.0"
requests = "^2.28.1"
simplejson = "^3.17.6"
orjson = "^3.8.0"
pdfkit = "^1.0.0"
Jinja2 = "^3.0.3"
diskcache = "^5.4.0"
sentry-sdk = "^1.10.1"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
flake8 = "^5.0.4"
flake8-bugbear = "^22.9.23"
isort = "^5.10.1"
black = "^22.8.0"
pytest = "^6.2.5"
coverage = "^5.5"
pre-commit = "^2.20.0"
types-aiofiles = "^0.1.9"
types-orjson = "^3.6.2"
types-ujson = "^0.1.1"
nox = "^2021.6.12"
safety = "^1.10.3"
types-requests = "^2.28.11"
types-simplejson = "^3.17.7"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
